--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "nodemon --ext '*' server.js"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
